[package]
name = "abnf"
description = "A nom-based parser for ABNF."
version = "0.3.0"
authors = ["Damian Poddebniak <poddebniak@fh-muenster.de>"]
readme = "README.md"
license = "AGPL-3.0"
edition = "2018"

repository = "https://github.com/duesee/abnf"
keywords = ["abnf", "parser", "nom"]

[dependencies]
nom = "5"
