[package]
name = "abnf"
description = "A nom-based parser for ABNF."
version = "0.4.0"
authors = ["Damian Poddebniak <poddebniak@fh-muenster.de>"]
readme = "README.md"
license = "AGPL-3.0"
edition = "2018"

repository = "https://github.com/duesee/abnf"
keywords = ["abnf", "parser", "nom"]

[dependencies]
nom = "5"

[dev-dependencies]
quickcheck        = "0.8"
quickcheck_macros = "0.8"
rand              = "0.6.5"
