[package]
name = "abnf"
description = "A nom-based parser for ABNF."
version = "0.12.0"
authors = ["Damian Poddebniak <poddebniak@fh-muenster.de>"]
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

repository = "https://github.com/duesee/abnf"
keywords = ["abnf", "parser", "nom"]

[dependencies]
nom = "7.0.0-alpha1"
abnf-core = "0.5.0"

[dev-dependencies]
quickcheck        = "1"
quickcheck_macros = "1"
rand              = "0.8"
rand_distr        = "0.4"
